--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node --experimental-modules test/test.mjs"
+    "test": "node --experimental-modules test/test.mjs",
+    "examples": "for filename in examples/*.mjs; do node --experimental-modules $filename; done"
   },
   "repository": {
     "type": "git",
